test/scc_test/exp/semantic-errors/102.t
void test()
{
    struct {int x;} a;
    a += 1;
}